krator/tests/ui/state/require_transition_to.stderr
error[E0277]: the trait bound `TestState: TransitionTo<_>` is not satisfied
  --> $DIR/require_transition_to.rs:38:9
   |
LL |         Transition::next(self, TestState)
   |         ^^^^^^^^^^^^^^^^ the trait `TransitionTo<_>` is not implemented for `TestState`
   |
note: required by a bound in `Transition::<S>::next`
  --> $SRC_DIR/src/state.rs:45:12
   |
LL |         I: TransitionTo<O>,
   |            ^^^^^^^^^^^^^^^ required by this bound in `Transition::<S>::next`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
